{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 26,
  "lineage": "8c40b4ba-fe08-2498-ce36-9fe82962a43d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:network-acl/acl-007240c5b91fba78e",
            "default_network_acl_id": "acl-007240c5b91fba78e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-007240c5b91fba78e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "523738358273",
            "subnet_ids": [
              "subnet-02368cbdcfaca7d50",
              "subnet-0446eb64321de6df8",
              "subnet-04911e06c2d49acd7",
              "subnet-06eab1402b34d5c32",
              "subnet-0b101b5a1eb2ac619",
              "subnet-0b42311025cb22870"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0b48319c39f2a8ecb",
            "default_route_table_id": "rtb-0b48319c39f2a8ecb",
            "id": "rtb-0b48319c39f2a8ecb",
            "owner_id": "523738358273",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:security-group/sg-0294dd3814c8a2b9f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0294dd3814c8a2b9f",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "523738358273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-default",
              "Owner": "Gaurav Tyagi"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06232919a9765d9db",
            "arn": "arn:aws:ec2:us-east-1:523738358273:elastic-ip/eipalloc-06232919a9765d9db",
            "domain": "vpc",
            "id": "eipalloc-06232919a9765d9db",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-45-41.compute-1.amazonaws.com",
            "public_ip": "3.234.45.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-us-east-1a",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-us-east-1a",
              "Owner": "Gaurav Tyagi"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:internet-gateway/igw-02c0608e2aed7ab96",
            "id": "igw-02c0608e2aed7ab96",
            "owner_id": "523738358273",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc",
              "Owner": "Gaurav Tyagi"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06232919a9765d9db",
            "association_id": "eipassoc-078ea0543e83067dd",
            "connectivity_type": "public",
            "id": "nat-0259220e3b759a703",
            "network_interface_id": "eni-0e51c8d0f353620e9",
            "private_ip": "10.0.101.154",
            "public_ip": "3.234.45.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06eab1402b34d5c32",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-us-east-1a",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-us-east-1a",
              "Owner": "Gaurav Tyagi"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cc0463c25965f6561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0259220e3b759a703",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc0463c25965f656",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02c0608e2aed7ab96",
            "id": "r-rtb-0f95e41907bd514001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f95e41907bd51400",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-089643fef03c9d391",
            "id": "rtb-089643fef03c9d391",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-db",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-db",
              "Owner": "Gaurav Tyagi"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0cc0463c25965f656",
            "id": "rtb-0cc0463c25965f656",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-private",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-private",
              "Owner": "Gaurav Tyagi"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0f95e41907bd51400",
            "id": "rtb-0f95e41907bd51400",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-public",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-public",
              "Owner": "Gaurav Tyagi"
            },
            "timeouts": null,
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aedb3f7158f9a873",
            "route_table_id": "rtb-089643fef03c9d391",
            "subnet_id": "subnet-0446eb64321de6df8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f99962be7a119e9e",
            "route_table_id": "rtb-089643fef03c9d391",
            "subnet_id": "subnet-0b101b5a1eb2ac619"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea7dc7ae96615ff",
            "route_table_id": "rtb-0cc0463c25965f656",
            "subnet_id": "subnet-0b42311025cb22870"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03795bbfcbb418fba",
            "route_table_id": "rtb-0cc0463c25965f656",
            "subnet_id": "subnet-02368cbdcfaca7d50"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0734cbce4ce1c78ee",
            "route_table_id": "rtb-0f95e41907bd51400",
            "subnet_id": "subnet-06eab1402b34d5c32"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aec9d2b718934582",
            "route_table_id": "rtb-0f95e41907bd51400",
            "subnet_id": "subnet-04911e06c2d49acd7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0446eb64321de6df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0446eb64321de6df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-db-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-db-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0b101b5a1eb2ac619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b101b5a1eb2ac619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-db-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "database-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-db-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "database-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0b42311025cb22870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b42311025cb22870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-private-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-private-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-02368cbdcfaca7d50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02368cbdcfaca7d50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-private-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "private-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-private-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "private-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-06eab1402b34d5c32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06eab1402b34d5c32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-public-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-public-us-east-1a",
              "Owner": "Gaurav Tyagi",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-04911e06c2d49acd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04911e06c2d49acd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-myvpc-public-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "public-subnets"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-myvpc-public-us-east-1b",
              "Owner": "Gaurav Tyagi",
              "Type": "public-subnets"
            },
            "vpc_id": "vpc-03fbf509469e9ae21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:vpc/vpc-03fbf509469e9ae21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007240c5b91fba78e",
            "default_route_table_id": "rtb-0b48319c39f2a8ecb",
            "default_security_group_id": "sg-0294dd3814c8a2b9f",
            "dhcp_options_id": "dopt-05350501c0a899a7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03fbf509469e9ae21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b48319c39f2a8ecb",
            "owner_id": "523738358273",
            "tags": {
              "Environment": "prod",
              "Name": "vpc-dev",
              "Owner": "Gaurav Tyagi"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-dev",
              "Owner": "Gaurav Tyagi"
            }
          }
        }
      ]
    }
  ]
}